Implementação do método do canto noroeste, que gera a solução básica viável.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -96,19 +96,19 @@
      "output_type": "stream",
      "text": [
       "Número de origens: 3\n",
-      "Número de destinos: 2\n",
-      "Demandas: [2300, 1400]\n",
-      "Capacidades de atendimento: [1000, 1500, 1200]\n",
+      "Número de destinos: 4\n",
+      "Demandas: [5, 15, 15, 15]\n",
+      "Capacidades de atendimento: [15, 25, 10]\n",
       "Matriz de custos:\n",
-      "[[ 80. 215.]\n",
-      " [100. 108.]\n",
-      " [102.  68.]]\n"
+      "[[10.  2. 20. 11.]\n",
+      " [12.  7.  9. 20.]\n",
+      " [ 4. 14. 16. 18.]]\n"
      ]
     }
    ],
    "source": [
     "# Teste de leitura e preparação da tabela\n",
-    "arquivo = 'Entrada Problema de Transporte.txt'\n",
+    "arquivo = 'Entrada2.txt'\n",
     "num_origens, num_destinos, cap_atendimento, demandas, matriz_custos = ler_entrada(arquivo)\n",
     "\n",
     "print(f\"Número de origens: {num_origens}\")\n",
@@ -121,73 +121,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def balancear_problema(num_origens, num_destinos, cap_atendimento, demandas):\n",
+    "    if sum(cap_atendimento) > sum(demandas):\n",
+    "        print(\"Capacidade de atendimento é maior que a demanda total\")\n",
+    "        demandas.append(sum(cap_atendimento) - sum(demandas))\n",
+    "        num_destinos += 1\n",
+    "    elif sum(cap_atendimento) < sum(demandas):\n",
+    "        print(\"Demanda total é maior que a capacidade de atendimento\")\n",
+    "        cap_atendimento.append(sum(demandas) - sum(cap_atendimento))\n",
+    "        num_origens += 1\n",
+    "    return num_origens, num_destinos, cap_atendimento, demandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matriz de alocação inicial:\n",
-      "[[1000.    0.]\n",
-      " [1300.  200.]\n",
-      " [   0. 1200.]]\n"
+      "Número de origens: 3\n",
+      "Número de destinos: 4\n",
+      "Demandas: [5, 15, 15, 15]\n",
+      "Capacidades de atendimento: [15, 25, 10]\n",
+      "Matriz de custos:\n",
+      "[[10.  2. 20. 11.]\n",
+      " [12.  7.  9. 20.]\n",
+      " [ 4. 14. 16. 18.]]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "num_origens, num_destinos, cap_atendimento, demandas = balancear_problema(num_origens, num_destinos, cap_atendimento, demandas)\n",
     "\n",
-    "def metodo_menor_custo(num_origens, num_destinos, cap_atendimento, demandas, matriz_custos):\n",
-    "    alocacao = np.zeros((num_origens, num_destinos), dtype=np.float64)\n",
-    "    \n",
-    "    # Convertendo listas para arrays numpy para facilitar operações\n",
-    "    capacidade = np.array(cap_atendimento, dtype=np.float64)\n",
-    "    demanda = np.array(demandas, dtype=np.float64)\n",
-    "    custos = np.array(matriz_custos, dtype=np.float64)\n",
-    "    \n",
-    "    # Criando cópia das capacidades e demandas para atualizar conforme alocação\n",
-    "    capacidade_restante = capacidade.copy()\n",
-    "    demanda_restante = demanda.copy()\n",
-    "    \n",
-    "    while np.any(capacidade_restante > 0) and np.any(demanda_restante > 0):\n",
-    "        # Encontrando a célula de menor custo\n",
-    "        custo_min = np.inf\n",
-    "        pos_min = (-1, -1)\n",
-    "        \n",
-    "        for i in range(num_origens):\n",
-    "            for j in range(num_destinos):\n",
-    "                if capacidade_restante[i] > 0 and demanda_restante[j] > 0:\n",
-    "                    if custos[i, j] < custo_min:\n",
-    "                        custo_min = custos[i, j]\n",
-    "                        pos_min = (i, j)\n",
-    "        \n",
-    "        i, j = pos_min\n",
-    "        \n",
-    "        # Determinar a quantidade a ser alocada na célula de menor custo\n",
-    "        quantidade = min(capacidade_restante[i], demanda_restante[j])\n",
-    "        alocacao[i, j] = quantidade\n",
-    "        \n",
-    "        # Atualizar capacidade e demanda restantes\n",
-    "        capacidade_restante[i] -= quantidade\n",
-    "        demanda_restante[j] -= quantidade\n",
-    "    \n",
-    "    return alocacao\n",
-    "\n",
-    "# Exemplo de uso\n",
-    "alocacao = metodo_menor_custo(num_origens, num_destinos, cap_atendimento, demandas, matriz_custos)\n",
-    "print(\"Matriz de alocação inicial:\")\n",
-    "print(alocacao)\n"
+    "print(f\"Número de origens: {num_origens}\")\n",
+    "print(f\"Número de destinos: {num_destinos}\")\n",
+    "print(f\"Demandas: {demandas}\")\n",
+    "print(f\"Capacidades de atendimento: {cap_atendimento}\")\n",
+    "print(\"Matriz de custos:\")\n",
+    "print(matriz_custos)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabela inicial:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>D1</th>\n",
+       "      <th>D2</th>\n",
+       "      <th>D3</th>\n",
+       "      <th>D4</th>\n",
+       "      <th>Oferta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>O1</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O2</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Demanda</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           D1    D2    D3    D4 Oferta\n",
+       "O1       10.0   2.0  20.0  11.0     15\n",
+       "O2       12.0   7.0   9.0  20.0     25\n",
+       "O3        4.0  14.0  16.0  18.0     10\n",
+       "Demanda   5.0  15.0  15.0  15.0   None"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Interpretação da matriz de alocação inicial:\n",
+    "import pandas as pd\n",
     "\n",
-    "As linhas são as origens e as colunas são os destinos. Na primeira linha, a origem 1 mandou 1000 unidades para o destino 1, porque era o mais vantajoso. A origem 2 tem 1500 disponíveis. O menor custo para ele também é para o destino 1, então ele aloca 1300 unidades para atender o restante da demanda desse destino, sobrando 200, que são enviados para a segunda demanda."
+    "def gerar_tabela_inicial(num_origens, num_destinos, cap_atendimento, demandas, matriz_custos):    \n",
+    "    fabricas = [f\"O{i+1}\" for i in range(num_origens)]\n",
+    "    distribuicao = [f\"D{j+1}\" for j in range(num_destinos)]\n",
+    "    \n",
+    "    # Criar estrutura da tabela\n",
+    "    tabela = pd.DataFrame(matriz_custos, index=fabricas, columns=distribuicao)\n",
+    "    \n",
+    "    # Adicionar as colunas de oferta\n",
+    "    tabela[\"Oferta\"] = cap_atendimento\n",
+    "    \n",
+    "    # Adicionar a linha de demanda\n",
+    "    demanda_row = pd.DataFrame([demandas + [None]], index=[\"Demanda\"], columns=tabela.columns)\n",
+    "    \n",
+    "    tabela = pd.concat([tabela, demanda_row])\n",
+    "    \n",
+    "    return tabela\n",
+    "\n",
+    "tabela = gerar_tabela_inicial(num_origens, num_destinos, cap_atendimento, demandas, matriz_custos)\n",
+    "print(\"Tabela inicial:\")\n",
+    "tabela"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>D1</th>\n",
+       "      <th>D2</th>\n",
+       "      <th>D3</th>\n",
+       "      <th>D4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>O1</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     D1    D2    D3    D4\n",
+       "O1  5.0  10.0   0.0   0.0\n",
+       "O2  0.0   5.0  15.0   5.0\n",
+       "O3  0.0   0.0   0.0  10.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def gerar_solucao_basica_viavel(tabela):\n",
+    "    solucao = tabela.copy()\n",
+    "\n",
+    "    # Matriz para armazenar as alocações sem modificar os custos\n",
+    "    alocacoes = pd.DataFrame(np.zeros_like(solucao.iloc[:-1, :-1]), \n",
+    "                             index=solucao.index[:-1], \n",
+    "                             columns=solucao.columns[:-1])\n",
+    "\n",
+    "    contador_linha = 0\n",
+    "    contador_coluna = 0\n",
+    "    \n",
+    "    while solucao.iloc[:-1, -1].sum() > 0 and solucao.iloc[-1, :-1].sum() > 0:\n",
+    "        oferta_disponivel = solucao.iloc[contador_linha, -1]\n",
+    "        demanda_disponivel = solucao.iloc[-1, contador_coluna]\n",
+    "        \n",
+    "        # Alocar o mínimo entre a oferta e a demanda (máximo possível para a célula)\n",
+    "        quantidade = min(oferta_disponivel, demanda_disponivel)\n",
+    "        alocacoes.iloc[contador_linha, contador_coluna] = quantidade\n",
+    "\n",
+    "        # Atualizar oferta e demanda\n",
+    "        solucao.iloc[contador_linha, -1] -= quantidade\n",
+    "        solucao.iloc[-1, contador_coluna] -= quantidade\n",
+    "\n",
+    "        # Atualizar os contadores para mover para a próxima célula\n",
+    "        if solucao.iloc[contador_linha, -1] == 0:\n",
+    "            contador_linha += 1\n",
+    "        elif solucao.iloc[-1, contador_coluna] == 0:\n",
+    "            contador_coluna += 1\n",
+    "\n",
+    "    return alocacoes\n",
+    "\n",
+    "solucao = gerar_solucao_basica_viavel(tabela)\n",
+    "solucao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -206,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
