--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -258,8 +259,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "def gerar_tabela_inicial(num_origens, num_destinos, cap_atendimento, demandas, matriz_custos):    \n",
     "    fabricas = [f\"O{i+1}\" for i in range(num_origens)]\n",
     "    distribuicao = [f\"D{j+1}\" for j in range(num_destinos)]\n",
